Se agrega footer en index.htm

--- a/index.html
+++ b/index.html
@@ -17,55 +17,99 @@
   </head>
   <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h1 class="text-center mb-4">Gestión de Proyectos</h1>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <h1 class="text-center mb-4">Gestión de Proyectos</h1>
 
-                <form id="formulario-proyecto" class="card p-4 shadow-sm bg-white">
-                    <h3 class="text-center mb-3">Ingresar o Editar Proyecto</h3>
-                    <div class="mb-3">
-                        <label for="nombre_proyecto" class="form-label">Nombre del Proyecto:</label>
-                        <input type="text" id="nombre_proyecto" class="form-control" required>
-                    </div>
-
-                    <h3 class="text-center mb-3">Ingresar o Editar Trabajador</h3>
-                    <div class="mb-3">
-                        <label for="nombre_trabajador" class="form-label">Nombre del Trabajador:</label>
-                        <input type="text" id="nombre_trabajador" class="form-control" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="rut_trabajador" class="form-label">RUT del Trabajador:</label>
-                        <input type="number" id="rut_trabajador" class="form-control" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="cargo_trabajador" class="form-label">Cargo del Trabajador:</label>
-                        <input type="text" id="cargo_trabajador" class="form-control" required>
-                    </div>
-
-                    <div class="text-center">
-                        <button type="button" id="btn-agregar" class="btn btn-primary me-2" disabled>Agregar</button>
-                        <button type="button" id="btn-editar" class="btn btn-warning d-none">Editar</button>
-                    </div>
-                </form>
-
-                <div class="table-responsive">
-                    <h2 class="text-center mt-5">Proyectos Registrados</h2>
-                    <table class="table table-striped table-hover">
-                        <thead class="table-dark">
-                            <tr>
-                                <th scope="col">Proyecto</th>
-                                <th scope="col">Trabajador</th>
-                                <th scope="col">RUT</th>
-                                <th scope="col">Cargo</th>
-                                <th scope="col">Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody id="resultados"></tbody>
-                    </table>
-                </div>
+          <form id="formulario-proyecto" class="card p-4 shadow-sm bg-white">
+            <h3 class="text-center mb-3">Ingresar o Editar Proyecto</h3>
+            <div class="mb-3">
+              <label for="nombre_proyecto" class="form-label"
+                >Nombre del Proyecto:</label
+              >
+              <input
+                type="text"
+                id="nombre_proyecto"
+                class="form-control"
+                required
+              />
             </div>
+
+            <h3 class="text-center mb-3">Ingresar o Editar Trabajador</h3>
+            <div class="mb-3">
+              <label for="nombre_trabajador" class="form-label"
+                >Nombre del Trabajador:</label
+              >
+              <input
+                type="text"
+                id="nombre_trabajador"
+                class="form-control"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="rut_trabajador" class="form-label"
+                >RUT del Trabajador:</label
+              >
+              <input
+                type="number"
+                id="rut_trabajador"
+                class="form-control"
+                required
+              />
+            </div>
+            <div class="mb-3">
+              <label for="cargo_trabajador" class="form-label"
+                >Cargo del Trabajador:</label
+              >
+              <input
+                type="text"
+                id="cargo_trabajador"
+                class="form-control"
+                required
+              />
+            </div>
+
+            <div class="text-center">
+              <button
+                type="button"
+                id="btn-agregar"
+                class="btn btn-primary me-2"
+                disabled
+              >
+                Agregar
+              </button>
+              <button
+                type="button"
+                id="btn-editar"
+                class="btn btn-warning d-none"
+              >
+                Editar
+              </button>
+            </div>
+          </form>
+
+          <div class="table-responsive">
+            <h2 class="text-center mt-5">Proyectos Registrados</h2>
+            <table class="table table-striped table-hover">
+              <thead class="table-dark">
+                <tr>
+                  <th scope="col">Proyecto</th>
+                  <th scope="col">Trabajador</th>
+                  <th scope="col">RUT</th>
+                  <th scope="col">Cargo</th>
+                  <th scope="col">Acciones</th>
+                </tr>
+              </thead>
+              <tbody id="resultados"></tbody>
+            </table>
+          </div>
         </div>
+      </div>
     </div>
+    <footer class="footer bg-dark text-white mt-4 p-3 text-center  fixed-bottom">
+      &copy; 2024 Ejercicio individual I | Módulo 4 |   Glenn Garcia 
+    </footer>
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -75,5 +119,3 @@
     <script src="/assets/js/funciones.js"></script>
   </body>
 </html>
-
-
