--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <!-- DataTable  -->
+<link
+rel="stylesheet"
+href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"
+/>
   </head>
   <body>
+    <div class="content-wrapper">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8">
@@ -91,7 +97,7 @@
 
           <div class="table-responsive">
             <h2 class="text-center mt-5">Proyectos Registrados</h2>
-            <table class="table table-striped table-hover">
+            <table id="tabla-proyectos" class="table table-striped table-hover">
               <thead class="table-dark">
                 <tr>
                   <th scope="col">Proyecto</th>
@@ -103,12 +109,13 @@
               </thead>
               <tbody id="resultados"></tbody>
             </table>
+            
           </div>
         </div>
       </div>
     </div>
-    <footer class="footer bg-dark text-white mt-4 p-3 text-center  fixed-bottom">
-      &copy; 2024 Ejercicio individual I | Módulo 4 |   Glenn Garcia 
+    <footer class="footer bg-dark text-white text-center fixed-bottom">
+      &copy; 2024 Ejercicio individual I | Módulo 4 | Glenn Garcia
     </footer>
 
     <!-- Bootstrap 5 JS -->
@@ -116,6 +123,29 @@
     <!-- FontAwesome JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
 
+    <!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
     <script src="/assets/js/funciones.js"></script>
+    
+
+    <script>
+$(document).ready(function () {
+    window.dataTable = $('#tabla-proyectos').DataTable({
+        language: {
+            url: "//cdn.datatables.net/plug-ins/1.11.5/i18n/es-ES.json",
+        },
+        responsive: true,
+        paging: true,
+        pageLength: 5,
+        lengthChange: false,
+        order: [[1, 'asc']],
+    });
+});
+
+    </script>
+    </div>
   </body>
 </html>
